--- a/up.css
+++ b/up.css
@@ -1,25 +1,31 @@
+body{
+  background:url(back.jpg) no-repeat;
+}
 h1{
   color: red;
-}
+  text-align: center;
+  opacity: 0.3}
 #trast{
   color: blue;
 }
 #trist{
-  background-color: hsla(100, 20%, 40%, 0.5);
+  -background-color: hsla(100, 20%, 40%, 0.5);
   color: red;
 
 }
 .alert{
   border-color: hsl(120, 70%, 40%);
   color: hsla(300, 80%, 90%);
-  background-color: hsla(120, 90%, 90%);
+
+
 }
 #boxmusic{
 position:inherit;
 background-position: center;
-background-color:hsla(11, 35%,20%);
+
 
 }
 audio{
 background-color: red;
+
 }
