--- a/new.css
+++ b/new.css
@@ -1,17 +1,28 @@
+h2{
+  text-align: center;
+  font-style: oblique;
+}
 #reddit{
   color:red;
   position: relative;
   font-family:cursive;
   font-size: 170%;
-  background-color: blue;
+  background-color: grey;
 }
 #bokovick{
   float: right;
-  display:block;
+  display:inline;
   background: grey;
-  padding: 30px;
+  padding: 35px;
   width: 300px;
 }
 #doomer{
 color:#691616;
+margin-top: 20px;
+text-align: center;
+line-height: 15;
+}
+#trubl{
+  vertical-align:middle;
+
 }
